--- a/aio/angular.json
+++ b/aio/angular.json
@@ -29,7 +29,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "webWorkerTsConfig": "tsconfig.worker.json",
             "aot": true,
             "optimization": true,
             "buildOptimizer": true,
@@ -40,6 +39,7 @@
             "extractLicenses": true,
             "namedChunks": true,
             "vendorChunk": false,
+            "progress": false,
             "assets": [
               "src/assets",
               "src/generated",
