--- a/aio/package.json
+++ b/aio/package.json
@@ -11,7 +11,7 @@
     "aio-use-local": "node tools/ng-packages-installer overwrite . --debug --force --build-packages",
     "aio-use-npm": "node tools/ng-packages-installer restore .",
     "aio-check-local": "node tools/ng-packages-installer check .",
-    "ng": "yarn check-env && ng",
+    "ng-off": "yarn check-env && ng",
     "start": "yarn check-env && ng serve --configuration=fast",
     "prebuild": "yarn setup",
     "build": "yarn ~~build",
@@ -87,28 +87,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.0.0-rc.1",
+    "@angular/animations": "^9.0.0-rc.2",
     "@angular/cdk": "9.0.0-next.0",
-    "@angular/common": "^9.0.0-rc.1",
-    "@angular/compiler": "^9.0.0-rc.1",
-    "@angular/core": "^9.0.0-rc.1",
-    "@angular/elements": "^9.0.0-rc.1",
-    "@angular/forms": "^9.0.0-rc.1",
+    "@angular/common": "^9.0.0-rc.2",
+    "@angular/compiler": "^9.0.0-rc.2",
+    "@angular/core": "^9.0.0-rc.2",
+    "@angular/elements": "^9.0.0-rc.2",
+    "@angular/forms": "^9.0.0-rc.2",
     "@angular/material": "9.0.0-next.0",
-    "@angular/platform-browser": "^9.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "^9.0.0-rc.1",
-    "@angular/router": "^9.0.0-rc.1",
-    "@angular/service-worker": "^9.0.0-rc.1",
+    "@angular/platform-browser": "^9.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.2",
+    "@angular/router": "^9.0.0-rc.2",
+    "@angular/service-worker": "^9.0.0-rc.2",
     "@webcomponents/custom-elements": "^1.2.0",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.900.0-rc.0",
-    "@angular/cli": "9.0.0-rc.0",
-    "@angular/compiler-cli": "^9.0.0-rc.1",
-    "@angular/language-service": "^9.0.0-rc.1",
+    "@angular-devkit/build-angular": "0.900.0-rc.2",
+    "@angular/cli": "9.0.0-rc.2",
+    "@angular/compiler-cli": "^9.0.0-rc.2",
+    "@angular/language-service": "^9.0.0-rc.2",
     "@types/jasmine": "^3.4.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/lunr": "^2.3.2",
